--- a/licensing-service.yml
+++ b/licensing-service.yml
@@ -26,10 +26,19 @@ spring:
 
   security:
     oauth2:
+      client:
+        registration:
+          keycloak:
+            client-id: ostock
+            authorization-grant-type: authorization_code
+            scope: openid
+            issuer-uri: http://keycloak:8080/realms/ostock
+            user-name-attribute: preferred_username
       resourceserver:
         jwt:
           issuer-uri: http://keycloak:8080/realms/ostock
           jwk-set-uri: http://keycloak:8080/realms/ostock/protocol/openid-connect/certs
+
             
 
 eureka:
