--- a/licensing-service.yml
+++ b/licensing-service.yml
@@ -32,6 +32,7 @@ spring:
             client-id: ostock
             authorization-grant-type: authorization_code
             scope: openid
+            client-secret: KdCx39Oj4RU6ec2k96gzCI4GfWoBezlE
         provider:
           keycloak:
             issuer-uri: http://keycloak:8080/realms/ostock
