--- a/licensing-service.yml
+++ b/licensing-service.yml
@@ -44,7 +44,7 @@ spring:
 
       resourceserver:
         jwt:
-          issuer-uri: http://keycloak:8080/auth/realms/ostock
+          issuer-uri: http://keycloak:8080/realms/ostock/protocol/openid-connect/token
               
 
 eureka:
